--- a/index.html
+++ b/index.html
@@ -1,15 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet">
+
    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon" style="width: 100%;">
    <link rel="stylesheet" href="./CSS/styles.css">
    <link rel="stylesheet" href="./CSS/responsive.css">
    <title>GammingZone</title>
 </head>
+
 <body>
-   
+   <!-- Header Section Start Here -->
+   <header>
+      <!-- navigation Menu Start Here -->
+      <nav class="nav-container">
+         <div class="logo-container">
+            <img src="./images/logo.png" alt="" class="logo">
+            <h1 class="logo-text"><span>G</span>amming<span>Zone</span></h1>
+         </div>
+         <div class="nav-bar">
+            <li>About Us</li>
+            <li>Devlopers</li>
+            <li class="follow-us">
+               <p>Follow Us On</p>
+               <div class="ic-youtube">
+                  <a href="#">
+                     <img src="./icons/ic_you_tube.png" alt="">
+                  </a>
+               </div>
+               <div>
+                  <a href="#">
+                     <img src="./icons/ic_tiktok.png" alt="">
+                  </a>
+               </div>
+            </li>
+         </div>
+      </nav>
+      <!-- navigation Menu End Here -->
+
+      <!-- Banner Section Start Here -->
+      <section class="banner">
+         <div class="banner-container">
+            <div class="banner-content">
+               <h1 class="banner-title">Play Like The</h1>
+               <h1 class="banner-hero-text">G.O.A.T.</h1>
+               <p class="banner-list-text-1">1-Click instant play</p>
+               <p class="banner-list-text-2">No Download</p>
+               <p class="banner-list-text-3">1000s of supported online games</p>
+               <div class="banner-button">
+                  
+               </div>
+            </div>
+         </div>
+      </section>
+      <!-- Banner Section End Here -->
+   </header>
+   <!-- Header Section End Here -->
+
+   <!-- Main Content Section Start Here -->
+   <main>
+
+   </main>
+   <!-- Main Content Section End Here -->
+
+   <!-- Footer Section Start Here -->
+   <footer>
+
+   </footer>
+   <!-- Main Content Section End Here -->
+
+
 </body>
+
 </html>
