Responsive Banner Section Updated

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet">
 
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
+
    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon" style="width: 100%;">
    <link rel="stylesheet" href="./CSS/styles.css">
    <link rel="stylesheet" href="./CSS/responsive.css">
@@ -48,15 +52,29 @@
       <!-- Banner Section Start Here -->
       <section class="banner">
          <div class="banner-container">
-            <div class="banner-content">
-               <h1 class="banner-title">Play Like The</h1>
-               <h1 class="banner-hero-text">G.O.A.T.</h1>
-               <p class="banner-list-text-1">1-Click instant play</p>
-               <p class="banner-list-text-2">No Download</p>
-               <p class="banner-list-text-3">1000s of supported online games</p>
-               <div class="banner-button">
-                  
+            <div class="banner-content-container">
+               <div class="banner-content">
+                  <h1 class="banner-title">Play Like The</h1>
+                  <p class="banner-hero-text">G.O.A.T.</p>
+                  <p class="banner-list-text-1">
+                     <img src="./icons/ic_play_button.svg" alt="">1-Click instant play
+                  </p>
+                  <p class="banner-list-text-2"><img src="./icons/ic_Download.svg" alt="">No Download</p>
+                  <p class="banner-list-text-3">
+                     <img src="./icons/ic_people.svg" alt="">1000s of supported online games
+                  </p>
+                  <div class="banner-button">
+                     <a href="">
+                        <button type="button" class="btn-primary banner-button-1">Sign In</button>
+                     </a>
+                     <a href="">
+                        <button type="button" class="btn-primary banner-button-2">Go Rogue</button>
+                     </a>
+                  </div>
                </div>
+            </div>
+            <div class="banner-image">
+               <img src="./images/img-banner.png" alt="">
             </div>
          </div>
       </section>
