Funy Video Section Updated

--- a/index.html
+++ b/index.html
@@ -84,6 +84,138 @@
 
    <!-- Main Content Section Start Here -->
    <main>
+      <!-- We are Gamer Section -->
+      <section class="we-are-gamer-banner">
+         <div class="gamer-banner-container">
+            <div class="gamer-banner-image">
+               <img src="./images/we-are-gammer.png" alt="">
+            </div>
+            <div class="gamer-banner-content-container">
+               <h1 class="gamer-banner-title">We are gamer</h1>
+               <p class="gamer-banner-description">
+                  An international digital games and entertainment company. We develop, publish and distribute
+                  multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.
+               </p>
+               <div class="gamer-banner-button">
+                  <a href="">
+                     <button type="button" class="btn-primary gamer-button">know more</button>
+                  </a>
+               </div>
+               <p class="our-purpose">
+                  Our Purpose... <br>
+                  <span>
+                     “unleash the gamer in everyone”
+                  </span>
+               </p>
+            </div>
+         </div>
+
+      </section>
+
+      <!-- game Funy Video Section -->
+      <section class="video-container">
+         <div class="video-text-content">
+            <h1 class="video-section-title">Online Games <span>Funny Videos</span></h1>
+            <p class="video-section-description">A Collection of Hilarious Videos to Brighten Your Day</p>
+         </div>
+         <div class="video-contents">
+            <div class="video-item">
+               <div class="video-thumbnail">
+                  <img src="./images/img-online-game-1.png" alt="">
+                  <div class="play-buttton-container">
+                     <a href="#">
+                        <div class="play-button">
+                           <img src="./icons/btn_play.png" alt="">
+                           <p>Watch Now</p>
+                        </div>
+                     </a>
+                  </div>
+               </div>
+               <p class="video-deccription">No Download. No Installs. Play games Instantly on Gamer.</p>
+            </div>
+            <div class="video-item">
+               <div class="video-thumbnail">
+                  <img src="./images/img-online-game-2.png" alt="">
+                  <div class="play-buttton-container">
+                     <a href="#">
+                        <div class="play-button">
+                           <img src="./icons/btn_play.png" alt="">
+                           <p>Watch Now</p>
+                        </div>
+                     </a>
+                  </div>
+               </div>
+               <p class="video-deccription">Did you score? #unblockedgames #school</p>
+            </div>
+            <div class="video-item">
+               <div class="video-thumbnail">
+                  <img src="./images/img-online-game-3.png" alt="">
+                  <div class="play-buttton-container">
+                     <a href="#">
+                        <div class="play-button">
+                           <img src="./icons/btn_play.png" alt="">
+                           <p>Watch Now</p>
+                        </div>
+                     </a>
+                  </div>
+               </div>
+               <p class="video-deccription">NBreaking game records like OG You Can Try.</p>
+            </div>
+            <div class="video-item">
+               <div class="video-thumbnail">
+                  <img src="./images/img-online-game-4.png" alt="">
+                  <div class="play-buttton-container">
+                     <a href="#">
+                        <div class="play-button">
+                           <img src="./icons/btn_play.png" alt="">
+                           <p>Watch Now</p>
+                        </div>
+                     </a>
+                  </div>
+               </div>
+               <p class="video-deccription">Busted gaming on school laptop, but you are still lit.</p>
+            </div>
+         </div>
+      </section>
+      <!-- Play Instanly Section -->
+      <section class="play-instant-section-container">
+         <div class="play-instant-section-content">
+            <div class="play-instant-text-content">
+               <h1 class="play-instant-title">
+                  <span>Play Instantly,</span><br>
+                  No Downloads
+                  No Installs.
+               </h1>
+               <p class="play-instant-description">
+                  Play games online for free without downloading. Just click the Play button and play instantly in your browser.
+               </p>
+            </div>
+            <div class="play-instant-images">
+   
+                  <img class="instant-image-1" src="./images/img-play-instant-1.png" alt="">
+                  <img class="instant-image-2" src="./images/img-play-instant-2.png" alt="">
+            </div>
+         </div>
+      </section>
+      <!-- Play Games Online Section -->
+      <section class="play-online-section-container">
+         <div class="play-online-section-content">
+            <div class="play-online-images">
+   
+               <img class="online-image-1" src="./images/img-play-games-1.png" alt="">
+               <img class="online-image-2" src="./images/img-play-games-2.png" alt="">
+         </div>
+            <div class="play-online-text-content">
+               <h1 class="play-online-title">
+                  <span>Play Games <br> Online</span><br>
+                   Anywhere, Anytime!
+               </h1>
+               <p class="play-online-description">
+                  Play games online for free without downloading. Just click the Play button and play instantly in your browser.
+               </p>
+            </div>
+         </div>
+      </section>
 
    </main>
    <!-- Main Content Section End Here -->
