Careers  Section Updated

--- a/index.html
+++ b/index.html
@@ -187,13 +187,14 @@
                   No Installs.
                </h1>
                <p class="play-instant-description">
-                  Play games online for free without downloading. Just click the Play button and play instantly in your browser.
+                  Play games online for free without downloading. Just click the Play button and play instantly in your
+                  browser.
                </p>
             </div>
             <div class="play-instant-images">
-   
-                  <img class="instant-image-1" src="./images/img-play-instant-1.png" alt="">
-                  <img class="instant-image-2" src="./images/img-play-instant-2.png" alt="">
+
+               <img class="instant-image-1" src="./images/img-play-instant-1.png" alt="">
+               <img class="instant-image-2" src="./images/img-play-instant-2.png" alt="">
             </div>
          </div>
       </section>
@@ -201,21 +202,65 @@
       <section class="play-online-section-container">
          <div class="play-online-section-content">
             <div class="play-online-images">
-   
+
                <img class="online-image-1" src="./images/img-play-games-1.png" alt="">
                <img class="online-image-2" src="./images/img-play-games-2.png" alt="">
-         </div>
+            </div>
             <div class="play-online-text-content">
                <h1 class="play-online-title">
                   <span>Play Games <br> Online</span><br>
-                   Anywhere, Anytime!
+                  Anywhere, Anytime!
                </h1>
                <p class="play-online-description">
-                  Play games online for free without downloading. Just click the Play button and play instantly in your browser.
+                  Play games online for free without downloading. Just click the Play button and play instantly in your
+                  browser.
                </p>
             </div>
          </div>
       </section>
+
+      <!-- Careers Section -->
+      <section class="careers-section-container">
+         <div class="careers-section-content">
+            <div class="career-section-text-contents">
+               <h1 class="careers-section-title">Careers</h1>
+               <p class="career-section-title-description">
+                  Gamer is driven to create the best and most fun games for our millions of players all around the
+                  world, and we,re always on the lookout for more top talent to join our growing team. If you,d like to
+                  help us make great games and be a part of Gamers bright future, we,d love to hear from you.
+               </p>
+               <div class="careers-section-column-text-container">
+                  <div class="column-1">
+                     <div>Multimedia Artist +</div>
+                     <div>Data Engineer +</div>
+                     <div>Adroid Engineer +</div>
+                     <div>Server Developer +</div>
+                     <div>Group Financial Accountant +</div>
+                     <div>Senior User Acuisition Specialist +</div>
+                  </div>
+                  <div class="column-2">
+                     <div>Lisbon, Portugal</div>
+                     <div>Lisbon, Portugal</div>
+                     <div>Zoetermeer, Netherlands</div>
+                     <div>Lisbon, Portugal</div>
+                     <div>London, United Kingdom</div>
+                     <div>Lisbon, Portugal</div>
+                  </div>
+               </div >
+               <div class="career-button">
+                  <a href="">
+                     <button type="button" class="btn-primary career-btn">See all positions</button>
+                  </a>
+               </div>
+            </div>
+
+            <div class="career-section-image-container">
+               <img src="./images/img_careers.png" alt="">
+            </div>
+
+         </div>
+      </section>
+
 
    </main>
    <!-- Main Content Section End Here -->
