Footer Section Updated

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                      <div>London, United Kingdom</div>
                      <div>Lisbon, Portugal</div>
                   </div>
-               </div >
+               </div>
                <div class="career-button">
                   <a href="">
                      <button type="button" class="btn-primary career-btn">See all positions</button>
@@ -260,14 +260,103 @@
 
          </div>
       </section>
-
+      <!-- Gaming Catagory SEction -->
+      <section class="catagories-container">
+         <div class="catagory-items">
+            <div class="catagory-item">
+               <a href="#">
+                  <img src="./images/ic_game_1.png" alt="">
+                  <span class="catagory-name">Action Games</span>
+               </a>
+            </div>
+            <div class="catagory-item">
+               <a href="#">
+                  <img src="./images/ic_game_2.png" alt="">
+                  <span class="catagory-name">Adventure Games</span>
+               </a>
+            </div>
+            <div class="catagory-item">
+               <a href="#">
+                  <img src="./images/ic_game_3.png" alt="">
+                  <span class="catagory-name">Arcade Games</span>
+               </a>
+            </div>
+            <div class="catagory-item">
+               <a href="#">
+                  <img src="./images/ic_game_4.png" alt="">
+                  <span class="catagory-name">Educational Games</span>
+               </a>
+            </div>
+            <div class="catagory-item">
+               <a href="#">
+                  <img src="./images/ic_game_5.png" alt="">
+                  <span class="catagory-name">Word Games</span>
+               </a>
+            </div>
+            <div class="catagory-item">
+               <a href="#">
+                  <img src="./images/ic_game_6.png" alt="">
+                  <span class="catagory-name">Role Palying Games</span>
+               </a>
+            </div>
+            <div class="catagory-item">
+               <a href="#">
+                  <img src="./images/ic_game_7.png" alt="">
+                  <span class="catagory-name">Music & Audio Games</span>
+               </a>
+            </div>
+            <div class="catagory-item">
+               <a href="#">
+                  <img src="./images/ic_game_8.png" alt=""><span class="catagory-name">Puzzle Games</span>
+               </a>
+            </div>
+            <div class="catagory-item">
+               <a href="#">
+                  <img src="./images/ic_game_9.png" alt="">
+                  <span class="catagory-name">Strategy Games</span>
+               </a>
+            </div>
+         </div>
+      </section>
 
    </main>
    <!-- Main Content Section End Here -->
 
    <!-- Footer Section Start Here -->
-   <footer>
-
+   <footer class="footer">
+      <div class="footer-container">
+         <div class="logo-container">
+            <img src="./images/logo.png" alt="" class="logo">
+            <h1 class="logo-text footer-logo-text"><span>G</span>amming<span>Zone</span></h1>
+         </div>
+         <nav class="footer-nav-1">
+            <li><a href="#">Our Story</a></li>
+            <li><a href="#">Games</a></li>
+            <li><a href="#">Web Games</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">My Account</a></li>
+         </nav>
+         <div class="social-midea-container">
+            <div class="social-media-item"><a href="#"><img src="./icons/ic_twitter.png" alt=""></a></div>
+            <div class="social-media-item"><a href="#"><img src="./icons/ic_facebook.png" alt=""></a></div>
+            <div class="social-media-item"><a href="#"><img src="./icons/ic_youtube.png" alt=""></a></div>
+            <div class="social-media-item"><a href="#"><img src="./icons/ic_linkedin.png" alt=""></a></div>
+            <div class="social-media-item"><a href="#"><img src="./icons/ic_instagram.png" alt=""></a></div>
+            <div class="social-media-item"><a href="#"><img src="./icons/ic_apple.png" alt=""></a></div>
+         </div>
+         <div class="footer-nav-2">
+            <li><a href="#">Terms and Conditions</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Cookie Policy</a></li>
+            <li><a href="#">Privacy Settings</a></li>
+         </div>
+         <div class="copyright-info">
+            <p>
+               Play Games @ Gamer &copy 2000-2023 Gamer Bangladesh
+            </p>
+         </div>
+      </div>
    </footer>
    <!-- Main Content Section End Here -->
 
