--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
    <!-- Footer Section Start Here -->
    <footer class="footer">
       <div class="footer-container">
-         <div class="logo-container">
+         <div class="footer-logo-container logo-container">
             <img src="./images/logo.png" alt="" class="logo">
             <h1 class="logo-text footer-logo-text"><span>G</span>amming<span>Zone</span></h1>
          </div>
@@ -359,7 +359,6 @@
       </div>
    </footer>
    <!-- Main Content Section End Here -->
-
 
 </body>
 
