Final Updated to Submission

--- a/index.html
+++ b/index.html
@@ -346,10 +346,18 @@
             <div class="social-media-item"><a href="#"><img src="./icons/ic_apple.png" alt=""></a></div>
          </div>
          <div class="footer-nav-2">
-            <li><a href="#">Terms and Conditions</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Cookie Policy</a></li>
-            <li><a href="#">Privacy Settings</a></li>
+            <li>
+               <a href="#">Terms and Conditions</a>
+            </li>
+            <li>
+               <a href="#">Privacy Policy</a>
+            </li>
+            <li>
+               <a href="#">Cookie Policy</a>
+            </li>
+            <li>
+               <a href="#">Privacy Settings</a>
+            </li>
          </div>
          <div class="copyright-info">
             <p>
