Final Updated to Submission

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <h1 class="logo-text"><span>G</span>amming<span>Zone</span></h1>
          </div>
          <div class="nav-bar">
-            <li>About Us</li>
-            <li>Devlopers</li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Devlopers</a></li>
             <li class="follow-us">
                <p>Follow Us On</p>
                <div class="ic-youtube">
